@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: diskfile.c,v 1.49 2002/04/13 19:24:51 jrjackson Exp $
+ * $Id: diskfile.c,v 1.50 2002/04/13 22:33:25 jrjackson Exp $
  *
  * read disklist file
  */
@@ -561,21 +561,19 @@ FILE *f;
 char *optionstr(dp)
 disk_t *dp;
 {
-    static char *str = NULL;
     char *kencrypt_opt = "";
     char *compress_opt = "";
     char *record_opt = "";
     char *index_opt = "";
-    char *exclude_file;
-    char *exclude_list;
-    char *include_file;
-    char *include_list;
+    char *exclude_file = NULL;
+    char *exclude_list = NULL;
+    char *include_file = NULL;
+    char *include_list = NULL;
     char *excl_opt = "";
     char *incl_opt = "";
     char *exc = NULL;
+    char *result = NULL;
     sle_t *excl;
-
-    amfree(str);
 
     switch(dp->compress) {
     case COMP_FAST:
@@ -630,21 +628,28 @@ disk_t *dp;
     if(dp->exclude_optional) excl_opt = "exclude-optional;";
     if(dp->include_optional) incl_opt = "include-optional;";
 
-    return vstralloc(";",
-		     "auth=",
-		     dp->security_driver,
-		     ";",
-		     kencrypt_opt,
-		     compress_opt,
-		     record_opt,
-		     index_opt,
-		     exclude_file,
-		     exclude_list,
-		     include_file,
-		     include_list,
-		     excl_opt,
-		     incl_opt,
-		     NULL);
+    result = vstralloc(";",
+		       "auth=",
+		       dp->security_driver,
+		       ";",
+		       kencrypt_opt,
+		       compress_opt,
+		       record_opt,
+		       index_opt,
+		       exclude_file,
+		       exclude_list,
+		       include_file,
+		       include_list,
+		       excl_opt,
+		       incl_opt,
+		       NULL);
+    amfree(exclude_list);
+    amfree(exclude_file);
+    amfree(include_file);
+    amfree(include_list);
+    amfree(exc);
+
+    return result;
 }
 
  
