@@ -1,5 +1,9 @@
 2002-04-13  John R. Jackson (jrj@purdue.edu)
 
+	* server-src/diskfile.c: Fix memory leak.
+
+2002-04-13  John R. Jackson (jrj@purdue.edu)
+
 	* server-src/amcheck.c: Fix error parsing in packet.
 
 2002-04-13  John R. Jackson (jrj@purdue.edu)
